[tool.poetry]
name = "alpha-quest"
version = "0.1.0"
description = ""
authors = ["tinumide <summittinuade@gmail.com>"]
readme = "README.md"
packages = [{include = "alpha_quest"}]

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^2.9.0"
transformers = "^4.26.1"
numpy = "^1.21.6"
tqdm = "^4.64.1"
torch = "^1.13.1"
wandb = "^0.13.10"
evaluate = "^0.4.0"
sacrebleu = "^2.3.1"
rouge-score = "^0.1.2"
accelerate = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
